--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://assets.pharmeasy.in/apothecary/images/favicon.png" />
+    <link rel="icon" href="https://i.postimg.cc/vDwDNgs5/medcode2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="PharmEasy: Online Pharmacy & Medical Store in India | 50 Lakhs+ Customers."
+      content="MediCode"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Cookie&family=La+Belle+Aurore&family=Maven+Pro&family=Montserrat:ital,wght@0,600;0,700;0,800;1,600;1,700&family=Open+Sans:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;800&family=Rubik+Moonrocks&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>PharmEasy: Online Pharmacy & Medical Store in India | 50 Lakhs+ Customers.</title>
+    <title>MediCode</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
